site verification meta tag added

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <meta name="google-site-verification" content="-ItDMRklhtJEyBJlTK-_si6tP-kWjXfHRhoIMhmpE2Q" />
+    <meta name="description" content="a application for postiong solutions for doughts in tech .">
+    <meta name="keywords" content="doughtflow , dought , dought flow , doughtnet ,Goutham, Goutham469, Goutham Reddy,Uppunuri Goutham Reddy, developer, JavaScript, full-stack, MERN, React">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
